--- a/Share Beauty App/Views/LX/IngredientSkinGraphView.xib
+++ b/Share Beauty App/Views/LX/IngredientSkinGraphView.xib
@@ -14,9 +14,19 @@
         <view contentMode="scaleToFill" id="NWk-vF-it2" userLabel="IngredientSkinGraphView" customClass="IngredientSkinGraphView" customModule="Share_Beauty_App">
             <rect key="frame" x="0.0" y="0.0" width="701" height="703"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N8p-qG-0uC">
+                    <rect key="frame" x="0.0" y="0.0" width="701" height="703"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                </scrollView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-185.5" y="-303"/>
+            <connections>
+                <outlet property="mScrollView" destination="N8p-qG-0uC" id="M2G-dE-h3L"/>
+            </connections>
+            <point key="canvasLocation" x="-211.5" y="-387.5"/>
         </view>
     </objects>
 </document>
