--- a/Share Beauty App/Views/LX/LXAngelicaView.xib
+++ b/Share Beauty App/Views/LX/LXAngelicaView.xib
@@ -20,7 +20,7 @@
             <rect key="frame" x="0.0" y="0.0" width="701" height="701"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Angelica Root Extract" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENB-ej-ekw">
+                <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Angelica Root Extract" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ENB-ej-ekw">
                     <rect key="frame" x="180" y="139" width="338" height="41"/>
                     <constraints>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="41" id="Kge-Va-kEB"/>
@@ -34,15 +34,16 @@
                     <rect key="frame" x="175" y="295" width="365" height="240"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN6-pT-gVA">
-                    <rect key="frame" x="127" y="177" width="444" height="74"/>
+                <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN6-pT-gVA">
+                    <rect key="frame" x="127" y="177" width="444" height="21"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="444" id="Htt-Ix-q4q"/>
-                        <constraint firstAttribute="height" constant="74" id="ntU-a9-LvW"/>
+                        <constraint firstAttribute="height" constant="21" id="TLp-Pz-5aA"/>
                     </constraints>
                     <attributedString key="attributedText">
                         <fragment>
-                            <string key="content">is derived from the Hokkaido Angelica Root.</string>
+                            <string key="content">is derived from the Hokkaido Angelica Root.
+</string>
                             <attributes>
                                 <color key="NSColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
                                 <font key="NSFont" size="17" name="ACaslonPro-Regular"/>
@@ -59,13 +60,33 @@
                     </attributedString>
                     <nil key="highlightedColor"/>
                 </label>
+                <label opaque="NO" userInteractionEnabled="NO" tag="12" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3VE-aR-QK0">
+                    <rect key="frame" x="128" y="199" width="444" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="444" id="Qf2-3T-cUw"/>
+                        <constraint firstAttribute="height" constant="21" id="amN-dS-wPJ"/>
+                        <constraint firstAttribute="width" constant="444" id="qrz-r8-rM4"/>
+                    </constraints>
+                    <attributedString key="attributedText">
+                        <fragment content="It reinforces the epidermis by promoting ATP production.">
+                            <attributes>
+                                <color key="NSColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
+                                <font key="NSFont" size="17" name="ACaslonPro-Regular"/>
+                                <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" lineHeightMultiple="1.3" tighteningFactorForTruncation="0.0"/>
+                            </attributes>
+                        </fragment>
+                    </attributedString>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="ENB-ej-ekw" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="139" id="51c-L8-XF2"/>
+                <constraint firstItem="3VE-aR-QK0" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="128" id="DgW-NY-4bC"/>
                 <constraint firstItem="CN6-pT-gVA" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="177" id="KN4-As-Gnf"/>
                 <constraint firstItem="CN6-pT-gVA" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="127" id="MMj-jK-8Qu"/>
                 <constraint firstItem="ENB-ej-ekw" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="180" id="a0c-ZK-e8D"/>
+                <constraint firstItem="3VE-aR-QK0" firstAttribute="top" secondItem="CN6-pT-gVA" secondAttribute="bottom" constant="1" id="q6t-kx-IkX"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="43.5" y="-33.5"/>
